[Fixed]Added underline in top left nav and added z-index at nav bar and added padding hero

--- a/components/HeaderHero/HeaderHero.module.css
+++ b/components/HeaderHero/HeaderHero.module.css
@@ -15,6 +15,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
+   padding-top: 10rem;
 }
 
 .heroText {
