--- a/components/nav/Nav.module.css
+++ b/components/nav/Nav.module.css
@@ -8,30 +8,38 @@
     align-items: center;
     flex-direction: column;
     font-size: 1.1rem;
+    z-index: 2;
 }
 
 .navTop {
     display: none;
     width: 100%;
-    /* une variable de padding ? */
     padding: 0.7rem 3rem;
     background-color: #272c31;
     justify-content: space-between;
     align-items: center;
     color: var(--main-color)
-    /* color: #3edac6; */
 }
 
 .navTopLeft {
     display: flex;
     gap: 3rem;
-    
 }
+
 .navTopLeftContact {
- display: flex;
- align-items: flex-end;;
- gap: 0.5rem;
+    display: flex;
+    align-items: flex-end;;
+    gap: 0.5rem;
 }
+
+.navTopLeftContact:hover {
+    text-decoration: underline;
+}
+
+.navTopRight:hover {
+    text-decoration: underline;
+}
+
 .navTopRight {
     display: flex;
     gap: 1.5rem;
@@ -45,7 +53,6 @@
     color: black;
     width: 100%;
     box-shadow: 0 4px 5px 0 #ccc;
-
 }
 
 .navBottomRight {
